# sampler

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  barycenters.dat.sha1
data/lut/: barycenters.dat.md5  offsets_bnot.dat.md5  production_rules.dat.md5
data/shader/: default.frag.glsl  default.vert.glsl  dfunc.frag.glsl  dfunc.vert.glsl  disk.frag.glsl  disk.geom.glsl  disk.vert.glsl  dot.frag.glsl  dot.vert.glsl
src/: colors.cpp  colors.hpp  config.h.in  debug.cpp  debug.hpp  densityFunction.cpp  densityFunction.hpp  matrix.hpp  matrix.tpl  sampler.cpp  sampler.cpp.rej  sampler.hpp  samplingAlgoAdaptive.hpp  samplingAlgoAdaptive.tpl  samplingAlgoTool.cpp  samplingAlgoTool.cpp.orig  samplingAlgoTool.hpp  samplingAlgoUniform.hpp  samplingAlgoUniform.tpl  tile.cpp  tile.hpp  tileState.cpp  tileState.hpp  tiling.cpp  tiling.hpp  tree.hpp  type.hpp  vector.hpp  vector.tpl  writer.hpp  writerEmpty.hpp  writerFilePts.cpp  writerFilePts.hpp  writerFileRaw.cpp  writerFileRaw.hpp  writerVector.cpp  writerVector.hpp
src/gui/: moc_view.cxx  moc_window.cxx  view.cpp  view.hpp  window.cpp  window.hpp
src/main/: cli.cpp  gui.cpp  test.cpp
